# vulkanalia-tutorial

./: .env  .gitignore  Cargo.toml  README.md  compile.sh
doc/: vulkan.md
src/: main.rs
src/app/: mod.rs
src/render/: buffer.rs  command_buffer.rs  command_pool.rs  descriptor_pool.rs  descriptor_set.rs  device.rs  framebuffer.rs  image.rs  instance.rs  mod.rs  pipeline.rs  queue.rs  render_pass.rs  swapchain.rs  synchronization.rs  validation.rs
src/shader/: shader.frag  shader.vert
